k3s_cluster/base/private/code/openclaw/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: private
  labels:
    app: private-code-openclaw
spec:
  type: ClusterIP
  selector:
    app: private-code-openclaw
  ports:
    - name: web
      protocol: TCP
      port: 4432
      targetPort: 18789
