k3s_cluster/base/private/code/openclaw/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: private
  labels:
    app: private-code-openclaw
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`openclaw.code.private.home`)
      # middlewares:
      #   - name: private-middleware-auth-authentik
      services:
        - name: private-code-openclaw-service
          port: 4432
  # tls: {}
